Started making changes for #4 (Suggester)