@@ -14,4 +14,4 @@ VALIDATOR_OPTS="-javaagent:lib/spring-instrument-${spring.version}.jar -Xmx4g -D
 # $1 - can be -httpPort=8080, $2 - can be -ajpPort=8009 (or whatever ports we want it use)
 
 
-$JAVA_HOME/bin/java -server $VALIDATOR_OPTS -jar biopax-validator-web.jar "$1" "$2"
+$JAVA_HOME/bin/java --illegal-access=permit -server $VALIDATOR_OPTS -jar biopax-validator-web.jar "$1" "$2"
